tests/samples/negative/types/const_initializer_self_reference.ax
module const_initializer_self_reference;

const A: i32 = A;

fn main() -> i32 {
  return A;
}
